tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20050125_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20050125-1.c" (c, x86_64-unknown-linux-gnu)
fn seterr(%arg3: rec_parse*, %arg4: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: rec_parse*, %arg4: s32i):
        %43 = alloca rec_parse*, "p", align 8
        %44 = alloca s32i, "err", align 4
        %45 = alloca s32i, "__retval", align 4
        store %arg3, %43
        store %arg4, %44
        %46 = load %44 : s32i, align 4
        %47 = load %43 : rec_parse*, align 8
        %48 = get_member %47[2] "error" : s32i*
        store %46, %48, align 8
        %49 = const 0 : s32i
        store %49, %45
        %50 = load %45 : s32i
        return %50
}
fn bracket_empty(%arg2: rec_parse*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: rec_parse*):
        %18 = alloca rec_parse*, "p", align 8
        store %arg2, %18
        scope {
            %19 = load %18 : rec_parse*, align 8
            %20 = get_member %19[0] "next" : s8i**
            %21 = load %20 : s8i*, align 8
            %22 = load %18 : rec_parse*, align 8
            %23 = get_member %22[1] "end" : s8i**
            %24 = load %23 : s8i*, align 8
            %25 = cmp lt %21, %24 : bool
            %26 = ternary %25 ? { : bool
                %34 = load %18 : rec_parse*, align 8
                %35 = get_member %34[0] "next" : s8i**
                %36 = load %35 : s8i*, align 8
                %37 = const 1 : s32i
                %38 = ptr_stride %36, %37 : s8i*
                store %38, %35, align 8
                %39 = load %36 : s8i, align 1
                %40 = cast(integral) %39 : s32i
                %41 = const 93 : s32i
                %42 = cmp eq %40, %41 : bool
                yield %42
            } : {
                %33 = const #false : bool
                yield %33
            }
            %27 = ternary %26 ? { : bool
                %32 = const #true : bool
                yield %32
            } : {
                %28 = load %18 : rec_parse*, align 8
                %29 = const 7 : s32i
                %30 = call @seterr(%28, %29) : s32i [all]
                %31 = cast(int_to_bool) %30 : bool
                yield %31
            }
            if %27 {
                yield
            }
            yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca rec_parse, "p", align 8
        store %arg0, %0
        store %arg1, %1
        %4 = const 0 : s32i
        store %4, %2
        %5 = const 74565 : u64i
        %6 = cast(int_to_ptr) %5 : s8i*
        %7 = get_member %3[1] "end" : s8i**
        store %6, %7, align 8
        %8 = get_member %3[0] "next" : s8i**
        store %6, %8, align 8
        %9 = const 0 : s32i
        %10 = get_member %3[2] "error" : s32i*
        store %9, %10, align 8
        call @bracket_empty(%3) [all]
        scope {
            %13 = get_member %3[2] "error" : s32i*
            %14 = load %13 : s32i, align 8
            %15 = const 7 : s32i
            %16 = cmp ne %14, %15 : bool
            if %16 {
                %17 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %11 = const 0 : s32i
        store %11, %2
        %12 = load %2 : s32i
        return %12
}
