tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20050131_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20050131-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %10 = alloca s32i, "a", align 4
        %11 = alloca s32i, "__retval", align 4
        %12 = alloca s32i, "x", align 4
        store %arg0, %10
        %13 = const 0 : s32i
        %14 = load %10 : s32i, align 4
        %15 = inc %14 : s32i [nsw]
        store %15, %10, align 4
        %16 = rem %13, %14 : s32i
        store %16, %12, align 4
        %17 = load %10 : s32i, align 4
        store %17, %11
        %18 = load %11 : s32i
        return %18
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %5 = const 9 : s32i
        %6 = call @foo(%5) : s32i [all]
        %7 = const 10 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = get_global @exit : ((s32i) -> void)*
    %3 = const 0 : s32i
    call @exit(%3) [all]
    %4 = load %0 : s32i
    return %4
}
